# athena

./: .env.example  .gitignore  COMPONENT_README.md  PYTHON_TASK.md  README.md  README_REWARDS.md  bot_orchestrator.py  build.sh  config.yaml  main.py  mcp_server.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  record_demo.mjs  record_demo.py  requirements-railway.txt  requirements.txt  run_all.bat  run_bot_and_dashboard.bat  run_bot_and_dashboard.ps1  run_dashboard.bat  run_dashboard.sh  run_forever.bat  run_kairos.bat  run_service.py  run_unified.py
agents/: __init__.py  architect.py  coder.py  orchestrator.py  scribe.py  tester.py
athena_mcp/: server.py
backend/: dashboard_api.py
contracts/: README.md  package.json
contracts/contracts/: FeeSplitter.sol  HerToken.sol  RewardDistributor.sol  Staking.sol
core/: dashboard_events.py  kairos_daemon.py  llm.py  react_loop.py  tools.py
dashboard/: .env.example  index.html  package-lock.json  tailwind.config.js  tsconfig.json
dashboard/src/: App.tsx  index.css
examples/: generated_function.py  hello_swarm.py
hermes/: soul.md
hermes/skills/: architecture_latest.md  skill-20260521-2145.yaml  skill-20260524-1818.yaml  skill-20260524-1849.yaml  skill-20260524-1850.yaml  skill-20260524-1851.yaml  skill-20260524-1908.yaml  skill-20260524-1917.yaml  skill-20260524-1918.yaml  skill-20260524-1932.yaml
interfaces/: messaging.py
landing/: .env.example  .gitignore  build_debug.txt  index.html  package-lock.json  package.json  tailwind.config.js
landing/src/: App.tsx  index.css
(+32 files in other folders)
